k8s/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user
          image: smith1984/svc_user:0.0.1
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8084
          livenessProbe:
            httpGet:
              port: 8084
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8084
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: "/app/resources/application.yaml"
              subPath: "application.yaml"
              readOnly: true
            - name: logback
              mountPath: "/app/resources/logback.xml"
              subPath: "logback.xml"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config-application-user
        - name: logback
          configMap:
            name: config-logback-user
