k8s/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
